Modified middleware/invoke permissions

--- a/ghub_exercise1.ipynb
+++ b/ghub_exercise1.ipynb
@@ -523,17 +523,12 @@
     "        \n",
     "    with workflow_output:\n",
     "        \n",
-    "        print ('Workflow in progress...\\n')\n",
-    "    \n",
     "        runWorkflowButton.disabled = True\n",
     "        \n",
     "        start_time = time.time()\n",
     "\n",
     "        try:\n",
     "            \n",
-    "            python_launch_exec_path = os.path.join(self_tooldir, \"remotebin\", \"pythonLaunch.sh\")\n",
-    "            log_info(\"pythonLaunch.sh path: \" + python_launch_exec_path)\n",
-    "\n",
     "            log_status (workflow_output, \"Pegasus workflow in progress. This should take approximately 5 minutes...\")\n",
     "            \n",
     "            Wrapper (\" \", \\\n",
@@ -577,7 +572,7 @@
     "        \n",
     "        except Exception as e:\n",
     "        \n",
-    "            print (\"Workflow Exception: %s\\n\" %str(e))\n",
+    "            print (\"Pegasus workflow Exception: %s\\n\" %str(e))\n",
     "            print (\"Please see the log output\\n\")\n",
     "       \n",
     "        runWorkflowButton.disabled = False\n",
