Mods to update scripts for ccrsoft/2023.01.  Mods per expanded testing of netCDF files.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -27,8 +27,8 @@
     "\n",
     "## Background\n",
     "\n",
-    "- The Python scripts are encapsulated as a workflow; the Pegasus Workflow Management System (WMS) automates and manages the execution of the workflow jobs, including staging the jobs, distributing the work, submitting the jobs to run on CCR's UB-HPC compute cluster, as well as handling data flow dependencies and overcoming job failures. See https://pegasus.isi.edu/documentation/index.html for more information on the Pegasus Workflow Management System (WMS). See https://theghub.org/tools/pegtut for an introductory Pegasus tutorial.\n",
-    "- The submit command enables Ghub users to execute code on CCR's UB-HPC compute cluster. See https://theghub.org/kb/development/using-submit for more information on the submit command. See https://help.hubzero.org/documentation/current/tooldevs/grid/pegasuswf and ./bin/Wrapper.py for more information on submitting a pegasus-plan for the workflow.\n",
+    "- The Python scripts are encapsulated as a workflow; the Pegasus Workflow Management System (WMS) automates and manages the execution of the workflow jobs, including staging the jobs, distributing the work, submitting the jobs to run on CCR's UB-HPC compute cluster, as well as handling data flow dependencies and overcoming job failures. See https://pegasus.isi.edu/documentation/index.html for more information on the Pegasus Workflow Management System (WMS).\n",
+    "- The submit command enables Ghub users to execute code on CCR's UB-HPC compute cluster. See https://theghub.org/kb/development/using-submit for more information on the submit command. See https://help.hubzero.org/documentation/current/tooldevs/grid/pegasuswf and ./bin/Wrapper_5_0_1.py for more information on submitting a pegasus-plan for the workflow.\n",
     "- This Jupyter-based tool uses Python 3. See https://theghub.org/resources?alias=jupyterexamples for more information on developing Jupyter-based tools on Ghub.\n",
     "- This tool is deployed on Debian 10 to run in Tool or App mode style. See https://theghub.org/kb/development/deploy-styles-for-jupyter-tools for more information on deploying Jupyter-based tools on Ghub."
    ]
@@ -308,11 +308,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Note: ghub group membership is required to use this tool.<br/>\n",
-    "\n"
+    "### Note: ghub group membership is required to use this tool.<br/>"
    ]
   },
   {
@@ -354,10 +355,10 @@
     "    message = 'ghub group membership is required to use this tool. %s is not a member of the ghub group. Please contact us.' %self_user\n",
     "    print ('%s%s%s' %(FAIL,message,END), flush=True)\n",
     "    log_info (message)\n",
-    "else:\n",
-    "    message = '%s is a member of the ghub group.' %self_user\n",
-    "    print ('\\n%s%s%s' %(SUCCESS,message,END), flush=True)\n",
-    "    log_info (message)\n"
+    "#else:\n",
+    "    #message = '%s is a member of the ghub group.' %self_user\n",
+    "    #print ('\\n%s%s%s' %(SUCCESS,message,END), flush=True)\n",
+    "    #log_info (message)\n"
    ]
   },
   {
@@ -384,7 +385,7 @@
    "outputs": [],
    "source": [
     "# Get the UB CCR's map collection folders information \n",
-    "mapped_collections_filename = os.path.join('/data/groups/ghub/tools/ghubex1', 'ub-ccr-ghub-ISMIP6-mapped_collections.xlsx')\n",
+    "mapped_collections_filename = os.path.join(self_datadir, 'ub-ccr-ghub-ISMIP6-mapped_collections.xlsx')\n",
     "\n",
     "mapped_collections_df = pd.read_excel (mapped_collections_filename)\n",
     "#print (type(mapped_collections_df))\n",
@@ -393,7 +394,7 @@
     "num_mapped_collections = len(mapped_collections_df)\n",
     "#print (num_mapped_collections)\n",
     "\n",
-    "HBox_layout = widgets.Layout(height='50px', width='98%', display='flex', flex_flow='row', justify_content='flex-start')\n",
+    "HBox_layout = widgets.Layout(height='45px', width='98%', display='flex', flex_flow='row', justify_content='flex-start')\n",
     "\n",
     "def append_modeling_groups (modeling_group):\n",
     "    model_checkbox = widgets.Checkbox(\n",
@@ -402,7 +403,7 @@
     "        indent = False,\n",
     "        disabled = True,\n",
     "        style = {'description_width':'200px'},\n",
-    "        layout= {'height': '50px', 'width': '200px'})\n",
+    "        layout= {'height': '40px', 'width': '200px'})\n",
     "    model = widgets.HBox(children=[model_checkbox], layout = HBox_layout)\n",
     "    all_modeling_groups.append(model)\n",
     "\n",
@@ -432,7 +433,7 @@
     "<a name=\"step_1\"></a>\n",
     "## Step 1: Select the Mapped Collection Folder [&#8607;](#top)\n",
     "\n",
-    "This tool allows users to select one of two predetermined UB CCR mapped collection folders.\n"
+    "This tool allows users to select one of four predetermined UB CCR mapped collection folders.\n"
    ]
   },
   {
@@ -481,7 +482,7 @@
     " <a name=\"step_2\"></a>\n",
     "## Step 2: Select the Modeling Groups [&#8607;](#top)\n",
     "\n",
-    "This tool allows users to select the modeling groups within the selected mapped collections folder. Time series data from experiment files contained within the selected modeling groups are summerized and displayed when the workflow is executed. See the Step 3, Run the Workflow section for more information. By default, the AWI and ITLS_PIK modeling groups are selected."
+    "This tool allows users to select the modeling groups within the selected mapped collection folder. Time series data from experiment files contained within the selected modeling groups are summerized and displayed when the workflow is executed. See the Step 3, Run the Workflow section for more information. By default, the AWI and ITLS_PIK modeling groups are selected."
    ]
   },
   {
@@ -609,7 +610,7 @@
     "                            os.remove(file)\n",
     " \n",
     "                #Note: Workflow execution time depends on the current UB CCR workload.\n",
-    "                log_status (workflow_progress, \"Pegasus workflow in progress. This should take approximately 30 minutes...\")\n",
+    "                log_status (workflow_progress, \"Pegasus workflow in progress...\")\n",
     "            \n",
     "                #'''\n",
     "                Wrapper (\" \", \\\n",
@@ -682,11 +683,9 @@
     "\n",
     "- This tool uses the Python xarray package to analyze time series data from experiment files contained within the mapped collection folder's selected modeling groups.\n",
     "\n",
-    "- Unique `Start Exp` and `End Exp` times, and, `Duration Years` are determined for each experiment type and displayed in the `View Workflow Results` section when the workflow completes.\n",
+    "- Unique `Start Exp` and `End Exp` times, and, `Years` are determined for each experiment type and displayed in the `View Workflow Results` section when the workflow completes.\n",
     "\n",
-    "- The scripts used to create the figures are encapsulated as a workflow by ./bin/Wrapper.py. The Pegasus Workflow Management System (WMS) automates and manages the execution of the workflow jobs, including staging the jobs, distributing the work, submitting the jobs to run in parallel on CCR, as well as handling data flow dependencies and overcoming job failures. See the `Background` section for more information on the Pegasus WMS.<br />\n",
-    "\n",
-    "- The estimated time to run the workflow is displayed. The estimated time assumes all worklow jobs complete successfully. If a workflow job returns with an error, Pegasus will attempt to re-execute the workflow job.<br />\n",
+    "- The scripts used to create the text file containing summarized time series information are encapsulated as a workflow by ./bin/Wrapper_5_0_1.py. The Pegasus Workflow Management System (WMS) automates and manages the execution of the workflow jobs, including staging the jobs, distributing the work, submitting the jobs to run in parallel on CCR, as well as handling data flow dependencies and overcoming job failures. See the `Background` section for more information on the Pegasus WMS.<br />\n",
     "\n",
     "- You will receive an email when the workflow completes and the results are ready for review.<br />\n",
     "\n",
