--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "requirejs.undef('filepicker');\n",
+       "\n",
+       "define('filepicker', [\"@jupyter-widgets/base\"], function(widgets) {\n",
+       "\n",
+       "    var FilePickerView = widgets.DOMWidgetView.extend({\n",
+       "        render: function(){\n",
+       "            this.file = document.createElement('input');\n",
+       "            this.file.setAttribute('class', 'fileinput');\n",
+       "            this.file.setAttribute('id', this.cid);\n",
+       "            this.file.multiple = this.model.get('multiple');\n",
+       "            this.file.required = true;\n",
+       "            this.file.setAttribute('type', 'file');\n",
+       "            this.file.setAttribute('style', 'display:none');\n",
+       "\n",
+       "            this.label = document.createElement('label');\n",
+       "            this.label.setAttribute('for', this.cid);\n",
+       "            this.label.setAttribute('style', 'border: 1px solid; border-radius: 5px; display: inline-block; padding: 6px 12px');\n",
+       "\n",
+       "            this.icon = document.createElement('i');\n",
+       "            this.icon.setAttribute(\"class\", \"fa fa-upload\");\n",
+       "\n",
+       "            if (this.file.multiple) {\n",
+       "                this.labelstr = \"  Upload Files\";\n",
+       "            } else {\n",
+       "                this.labelstr = \"  Upload File\";\n",
+       "            }\n",
+       "            this.label.innerHTML = this.labelstr;\n",
+       "            this.label.prepend(this.icon);\n",
+       "            this.el.appendChild(this.label);\n",
+       "            this.el.appendChild(this.file);\n",
+       "            this.listenTo(this.model, 'change:send', this._send_changed, this);\n",
+       "            this.listenTo(this.model, 'change:reset', this._reset, this);\n",
+       "            this.update();\n",
+       "        },\n",
+       "\n",
+       "        events: {\n",
+       "            // List of events and their handlers.\n",
+       "            'change': 'handle_file_change'\n",
+       "        },\n",
+       "\n",
+       "        _reset: function() {\n",
+       "            this.label.innerHTML = this.labelstr;\n",
+       "            this.label.prepend(this.icon);\n",
+       "            this.file.removeAttribute(\"disabled\");\n",
+       "        },\n",
+       "\n",
+       "        _send_changed: function() {\n",
+       "            var that = this;\n",
+       "            var send = this.model.get('send');\n",
+       "            var fnum = send[0];\n",
+       "            var offset = send[1];\n",
+       "            var chunk_size=64*1024;\n",
+       "            var reader;\n",
+       "\n",
+       "            if (fnum == -1) {\n",
+       "                // ignore\n",
+       "                return\n",
+       "            }\n",
+       "\n",
+       "            if (offset == 0) {\n",
+       "                this.model.set('sent', -1);\n",
+       "                this.touch();\n",
+       "            }\n",
+       "\n",
+       "            // console.log('send: ' + fnum + ' ' + offset);\n",
+       "            function tob64( buffer ) {\n",
+       "                var binary = '';\n",
+       "                var bytes = new Uint8Array( buffer );\n",
+       "                var len = bytes.byteLength;\n",
+       "                for (var i = 0; i < len; i++) {\n",
+       "                    binary += String.fromCharCode( bytes[ i ] );\n",
+       "                }\n",
+       "                return window.btoa( binary );\n",
+       "            }\n",
+       "\n",
+       "            var reader_done = function (event) {\n",
+       "                // chunk is finished.  Send to python\n",
+       "                if (event.target.error == null) {\n",
+       "                    var b64 = tob64(event.target.result);\n",
+       "                    that.model.set('data', b64);\n",
+       "                    that.model.set('sent', offset);\n",
+       "                    that.touch();\n",
+       "                } else {\n",
+       "                    console.log(\"Read error: \" + event.target.error);\n",
+       "                    that.model.set('data', '');\n",
+       "                    that.model.set('sent', -2);\n",
+       "                    that.touch();\n",
+       "                }\n",
+       "                that.touch();\n",
+       "            }\n",
+       "        \n",
+       "            var chunk_reader = function (_offset, _f) {\n",
+       "                // console.log('CR' + ' ' + _f + ' ' + _offset);\n",
+       "                reader = new FileReader();\n",
+       "                var chunk = _f.slice(_offset, chunk_size + _offset);            \n",
+       "                reader.readAsArrayBuffer(chunk);\n",
+       "                reader.onload = reader_done;\n",
+       "            }\n",
+       "    \n",
+       "            // OK. request next chunk\n",
+       "            chunk_reader(offset, this.files[fnum]);\n",
+       "        },\n",
+       "        \n",
+       "        \n",
+       "        handle_file_change: function(evt) {\n",
+       "\n",
+       "            var _files = evt.target.files;\n",
+       "            var filenames = [];\n",
+       "            var file_readers = [];\n",
+       "            this.files = [];\n",
+       "\n",
+       "            for (var i = 0; i < _files.length; i++) {\n",
+       "                var file = _files[i];\n",
+       "                console.log(\"Filename: \" + file.name);\n",
+       "                console.log(\"Type: \" + file.type);\n",
+       "                console.log(\"Size: \" + file.size + \" bytes\");\n",
+       "                this.files.push(file);\n",
+       "                filenames.push([file.name, file.size]);\n",
+       "            };\n",
+       "            \n",
+       "            // Set the filenames of the files.\n",
+       "            this.model.set('filenames', filenames);\n",
+       "            this.touch();\n",
+       "\n",
+       "            // update the label\n",
+       "            if (filenames.length == 0) {\n",
+       "                this.label.innerHTML = this.labelstr;\n",
+       "                this.file.removeAttribute(\"disabled\");\n",
+       "            } else if (filenames.length == 1) {\n",
+       "                this.label.innerHTML = \"  \" + filenames[0][0];\n",
+       "                this.file.setAttribute('disabled', 'true');\n",
+       "            } else {\n",
+       "                this.label.innerHTML = \"  \" + filenames.length + \" files selected\";\n",
+       "                this.file.setAttribute('disabled', 'true');           \n",
+       "            };\n",
+       "            this.label.prepend(this.icon);\n",
+       "        },\n",
+       "    });\n",
+       "\n",
+       "    // Register the FilePickerView with the widget manager.\n",
+       "    return {\n",
+       "        FilePickerView: FilePickerView\n",
+       "    };\n",
+       "});\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# As of 12/2023, tested with the Jupyter Notebook (202210) tool and the Python3 (ipykernel)\n",
+    "# As of 03/2024, tested with the Jupyter Notebook (202210) tool and the Python3 (ipykernel)\n",
     "\n",
     "# Setup and preoprocessing:\n",
     "\n",
@@ -109,7 +266,6 @@
     "    print ('cfg.DISPERSION_MODEL: ', cfg.DISPERSION_MODEL, '\\n')\n",
     "\n",
     "# Version of Pegasus\n",
-    "# Note: when switching the version of Pegasus, delete ~/.pegasus/workflow.db\n",
     "%use pegasus-5.0.1\n",
     "from Wrapper_5_0_1 import Wrapper\n",
     "\n",
@@ -172,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +340,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "    function scroll_to_top() {\n",
+       "        Jupyter.notebook.scroll_to_top();\n",
+       "    } \n",
+       "    $( window ).on( \"load\", scroll_to_top() );\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#https://api.jquery.com/ready/\n",
     "HTML('''\n",
@@ -201,9 +377,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>.buttontextclass { color:black ; font-size:130%}</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Button styles\n",
     "HTML('''\n",
@@ -213,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,9 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+       "    return false;\n",
+       "}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
@@ -234,10 +440,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize\n",
+    "\n",
+    "# Note: ~/.pegasus/workflow.db is not consistent between Pegasus 4.8.1 and Pegasus 5.0.1\n",
+    "pegasus_workflow_db_filepath = os.path.join(self_homedir, '.pegasus', 'workflow.db')\n",
+    "#print ('pegasus_workflow_db_filepath: ', pegasus_workflow_db_filepath)\n",
+    "if os.path.exists(pegasus_workflow_db_filepath):\n",
+    "    if os.path.exists(pegasus_workflow_db_filepath + '.save'):\n",
+    "        os.remove(pegasus_workflow_db_filepath + '.save')\n",
+    "    shutil.copy (pegasus_workflow_db_filepath, pegasus_workflow_db_filepath + '.save')\n",
+    "    os.remove(pegasus_workflow_db_filepath)\n",
+    "    \n",
     "if os.path.exists(self_log_filepath):\n",
     "    shutil.move (self_log_filepath, self_log_backup_filepath)\n",
     "    \n",
@@ -309,20 +526,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Note: ghub group membership is required to use this tool.<br/>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "environ = dict(os.environ)\n",
     "#print (type(environ))\n",
     "#print (environ)\n",
@@ -333,32 +540,7 @@
     "    session_num = 'session number unknown'\n",
     "message = 'Ghub session number: ' + str(session_num)\n",
     "#print ('%s%s%s' %(SUCCESS,message,END), flush=True)\n",
-    "log_info (message)\n",
-    "\n",
-    "# Verify ghub group membership\n",
-    "in_ghub_group = False\n",
-    "\n",
-    "groups_info_filename = 'groups_info.txt'\n",
-    "groups_cmd = 'groups > %s' %groups_info_filename\n",
-    "os.system(groups_cmd)\n",
-    "\n",
-    "if os.path.exists(groups_info_filename):\n",
-    "    f = open(groups_info_filename,'r')\n",
-    "    for line in f:\n",
-    "        groups = line.split(' ')\n",
-    "        #print ('groups: ', groups)\n",
-    "        for group in groups:\n",
-    "            if group == 'ghub':\n",
-    "                in_ghub_group = True\n",
-    "                break\n",
-    "if in_ghub_group == False:\n",
-    "    message = 'ghub group membership is required to use this tool. %s is not a member of the ghub group. Please contact us.' %self_user\n",
-    "    print ('%s%s%s' %(FAIL,message,END), flush=True)\n",
-    "    log_info (message)\n",
-    "#else:\n",
-    "    #message = '%s is a member of the ghub group.' %self_user\n",
-    "    #print ('\\n%s%s%s' %(SUCCESS,message,END), flush=True)\n",
-    "    #log_info (message)\n"
+    "log_info (message)\n"
    ]
   },
   {
@@ -380,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,9 +649,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e4ddf3814a94431ae8aecaa9b4794d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Group(children=(HTML(value=\"<p   style='background-color: #DCDCDC; font-size: 150%; padding: 5px'>Mapped Colle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "folder_form = ui.Form([folder_dropdown], name = 'Mapped Collection Folder')\n",
     "display (folder_form)"
@@ -487,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,9 +740,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08359f097e5f4dd9a7eff76b809e110a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "models_form_output = widgets.Output(layout={'border': widget_border_style})\n",
     "display(models_form_output)"
@@ -553,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,9 +906,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f474d01392564cf1878d24781302fd70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Group(children=(HTML(value=\"<p   style='background-color: #DCDCDC; font-size: 150%; padding: 5px'>Workflow Run…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78cf0ad3985b433cbad54e6bea05bdca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Run Workflow', layout=Layout(height='40px', width='250px'), style=ButtonStyle(button_color…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(workflow_run_options_form)\n",
     "display(runWorkflowButton)"
@@ -704,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,9 +1056,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee51404bd8e94145a1a7ad47339d0f89",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "workflow_progress = widgets.Output(layout={'border': widget_output_border_style})\n",
     "display(workflow_progress)"
@@ -833,9 +1089,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2f3065f2a25419ca2b4003101920ef7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "workflow_results = widgets.Output(layout={'border': widget_output_border_style})\n",
     "display(workflow_results)"
@@ -856,9 +1127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0aee5bfc31bf40608f9c4fcf1ca74f39",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Log Output', layout=Layout(height='40px', width='250px'), style=ButtonStyle(button_co…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def show_log_output(change):\n",
     "    \n",
@@ -892,9 +1178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd0b2ffa4a724c5692751a00d846b90a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "log_output = widgets.Output(layout={'border': widget_output_border_style})\n",
     "display (log_output)"
@@ -902,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
