--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -940,7 +940,7 @@
     "\n",
     "### Host GIT repository on HUB\n",
     "\n",
-    "Follow the instructions on the https://theghub.org/tools/create web page.  Enter a name for your tool, for this template, ghubex1 was entered. Select the Repository Host, Host GIT repository on HUB. Select the Publishing Option, Jupyter Notebook. \n",
+    "Follow the instructions on the https://theghub.org/tools/create web page.  Enter a name for your tool. Select the Repository Host, Host GIT repository on HUB. Select the Publishing Option, Jupyter Notebook. \n",
     "\n",
     "Note: when a new tool is created you will receive an email with a link to the tool's status page. The tool's status page will allow you to let the Ghub administrators know when you are ready to update, install, approve or publish your tool.\n",
     "\n",
