--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -1329,7 +1329,7 @@
     "<a name=\"gettemplatefiles\"></a>\n",
     "### Get the Template Files [&#8607;](#userguide)\n",
     "\n",
-    "- This tool's repository can be cloned with `git clone https://github.com/Ghub_Pegasus_WMS_Tutorial_and_Templates`.\n",
+    "- This tool's repository can be cloned with `https://github.com/GhubGateway/Ghub_Pegasus_Workflows_Tutorial_and_Templates`.\n",
     "\n",
     "- Specific template files provided by this tool can also be downloaded using the `Download` buttons provided by this tool. See the `View the Scripts and Source Code that Power this Tool` section for more information. \n",
     "\n",
