Added templates for C++, Fortran and R.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -848,10 +848,10 @@
     "    email_cmd = 'submit --progress silent mail2self -t \"'+email_text+'\" -s \"'+email_subject+'\"'\n",
     "    \n",
     "    # email debugging\n",
-    "    #start_time = time.time()\n",
-    "    #os.system(email_cmd)\n",
-    "    #elapsed_time = time.time() - start_time\n",
-    "    #print ('email elapsed time: ', elapsed_time)"
+    "    start_time = time.time()\n",
+    "    os.system(email_cmd)\n",
+    "    elapsed_time = time.time() - start_time\n",
+    "    print ('email elapsed time: ', elapsed_time)"
    ]
   },
   {
@@ -895,7 +895,7 @@
     "                    for line in f:\n",
     "                        log_info (line)\n",
     "                    f.close()\n",
-    "                    os.remove(file)\n",
+    "                    #os.remove(file)\n",
     "         \n",
     "        filepath = os.path.join(self_workingdir, 'pegasus.analysis')\n",
     "        if (os.path.exists(filepath)):\n",
