Set executable bits for binary executables in the bin directory. Add a Pegasus WMS pipeline flowchart.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -30,11 +30,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview\n",
-    "\n",
+    "## Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./data/pegasus_wms_pipeline_flowchart.png\" width=\"200\" height=\"200\" align=\"center\"></img>\n",
+    "#### <center><figcaption><br>Pegasus WMS Pipeline Workflow</figcaption></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- This tool provides Pegasus pipeline workflow templates which associates two simple workflow jobs to create a \"Hello World\" demonstration of Pegasus using an abstract YAML file and a cluster submission. This tool provides templates for workflow jobs written in `Bash`, `CPP`, `Fortran`, `MATLAB`, `Python` and `R`. The `Bash` template is selected by default.\n",
     "\n",
-    "- These workflow jobs are executed on the University at Buffalo (UB)'s Center For Computational Research (CCR)'s generally accessible high performance compute cluster, UB-HPC, using Pegasus and submit!\n"
+    "- These workflow jobs are executed on the University at Buffalo (UB)'s Center For Computational Research (CCR)'s generally accessible high performance compute cluster, UB-HPC, using Pegasus and submit!\n",
+    "\n",
+    "- To start, enter a string of lunch items in the `Lunch Items` text box, and, press the `Launch Workflow` button. After you press the `Launch Workflow` button, the string of lunch items is saved to the file `f.a`. The first workflow job reads the `f.a` file and writes the received lunch items to the file `f.b`. The second workflow job reads the `f.b` file and writes a thank you greeting to file `f.c`. When the workflow jobs complete, the thank you greeting is displayed in the `View Workflow Results` section. See the `Give It a Try` section for more information.\n"
    ]
   },
   {
@@ -213,11 +228,13 @@
    "metadata": {},
    "source": [
     "<a name=\"userguide\"></a>\n",
-    "## User Guide [&#8607;](#top)\n",
-    "\n",
-    "\n",
-    "- To start, enter a string of lunch items in the `Lunch Items` text box, and, press the `Launch Workflow` button. After you press the `Launch Workflow` button, the string of lunch items is saved to the file `f.a`. The first workflow job reads the `f.a` file and writes the received lunch items to the file `f.b`. The second workflow job reads the `f.b` file and writes a thank you greeting to file `f.c`. When the workflow jobs complete, the thank you greeting is displayed in the `View Workflow Results` section. See the `Give It a Try` section for more information.\n",
-    "\n",
+    "## User Guide [&#8607;](#top)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "1. [**Give it a try**](#giveitatry)<br />\n",
     "    \n",
@@ -227,7 +244,7 @@
     "\n",
     "4. [**Create your Pegasus workflow tool**](#createyourworkflowtool)<br />\n",
     "\n",
-    "Please [Schedule a Meeting](https://theghub.org/bookmeeting) if you have additional questions."
+    "Please [Schedule a Meeting](https://theghub.org/bookmeeting) if you need help with creating your Pegasus workflow tool on Ghub."
    ]
   },
   {
@@ -841,7 +858,7 @@
     "            file_output.clear_output()\n",
     "            download_button_output.clear_output()\n",
     "    else:\n",
-    "        log_error (file_output, '%s does not exist ' %filepath + '. Please contact us.')\n"
+    "        log_error (file_output, '%s does not exist.' %filepath)\n"
    ]
   },
   {
