Mods per testing the installed version of the tool Ghub.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -278,6 +278,7 @@
     "    \n",
     "    log_info('build_workflow_button.disabled: %s' %str(build_workflow_button.disabled)) \n",
     "    log_info('launch_workflow_button.disabled: %s' %str(launch_workflow_button.disabled))   \n",
+    "    log_info ('')\n",
     "\n",
     "\n",
     "# Create pointers for button click arguments that vary depending on the selected template\n",
@@ -388,7 +389,7 @@
     "\n",
     "            # If running the installed version of the notebook\n",
     "            if os.path.islink(os.path.join(self_tooldir, 'README.md')):\n",
-    "                log_info ('Compiling %s executables is currently disabled for %s -> %s.' %(Selected_Template, self_tooldir, os.readlink(self_tooldir)))\n",
+    "                log_info ('Compiling %s binary executables is currently disabled.' %Selected_Template)\n",
     "                build_workflow_button.disabled = True\n",
     "            else:\n",
     "                build_workflow_button.disabled = False\n",
