Mods per testing the installed version of the tool on Ghub.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -103,14 +103,8 @@
     "# Setup path to python and bash scripts\n",
     "self_bindir = os.path.join(self_tooldir, \"bin\")\n",
     "\n",
-    "# Setup path to python and bash scripts\n",
-    "self_remotebindir = os.path.join(self_tooldir, \"remotebin\")\n",
-    "\n",
-    "# Set up path to the current data directory\n",
-    "self_datadir = os.path.join(self_tooldir, \"data\")\n",
-    "\n",
-    "# Set up path to the current doc directory\n",
-    "self_docdir = os.path.join(self_tooldir, \"doc\")\n",
+    "# Add to this tool's bin directory to PYTHONPATH\n",
+    "sys.path.insert (1, self_bindir)\n",
     "\n",
     "# Set up path to the current session directory\n",
     "self_workingdir = os.getcwd()\n",
@@ -119,9 +113,6 @@
     "self_homedir = os.path.expanduser(\"~\")\n",
     "\n",
     "self_user = getpass.getuser()\n",
-    "\n",
-    "# Add to this tool's bin directory to PYTHONPATH\n",
-    "sys.path.insert (1, self_bindir)\n",
     "\n",
     "import configuration as cfg\n",
     "import build_wrapper #import BuildWrapper\n",
@@ -906,7 +897,7 @@
     "    # email debugging\n",
     "    start_time = time.time()\n",
     "    os.system(email_cmd)\n",
-    "    print ('email elapsed time: ', str((time.time() - start_time)/60.0) + ' minutes\\n')"
+    "    #print ('email elapsed time: ', str((time.time() - start_time)/60.0) + ' minutes\\n')"
    ]
   },
   {
@@ -1363,19 +1354,19 @@
     "<a name=\"learnaboutsoftware\"></a>\n",
     "## Learn About Software that Powers this Tool [&#8607;](#userguide)\n",
     "\n",
+    "[Pegasus WMS - Automate, recover, and debug computations](https://pegasus.isi.edu)\n",
+    "\n",
+    "[Center for Computational Research (CCR)](https://www.buffalo.edu/ccr.html)\n",
+    "\n",
+    "[Welcome to Pegasus WMS’s documentation!](https://pegasus.isi.edu/documentation)\n",
+    "\n",
     "[Jupyter Notebooks Examples and Documentation](https://theghub.org/resources?alias=jupyterexamples)\n",
     "\n",
     "[Jupyter tool deployment styles](https://theghub.org/kb/development/deploy-styles-for-jupyter-tools)\n",
     "\n",
-    "[Pegasus WMS - Automate, recover, and debug computations](https://pegasus.isi.edu)\n",
-    "\n",
-    "[Welcome to Pegasus WMS’s documentation!](https://pegasus.isi.edu/documentation)\n",
-    "\n",
     "[Submit](https://theghub.org/kb/development/using-submit)\n",
     "\n",
-    "[Pegasus Workflow Submission](https://help.hubzero.org/documentation/current/tooldevs/grid/pegasuswf)\n",
-    "\n",
-    "[Center for Computational Research (CCR)](https://www.buffalo.edu/ccr.html)"
+    "[Pegasus Workflow Submission](https://help.hubzero.org/documentation/current/tooldevs/grid/pegasuswf)\n"
    ]
   },
   {
@@ -1416,10 +1407,10 @@
     "\n",
     "- Launch the Jupyter Notebooks (202210) tool from the Ghub Dashboard's My Tools component and open `<your tool name>.ipynb`. Update `<your tool name>.ipynb` as required for your tool. Save your notebook updates and click the `Appmode` button to see how your notebook will display in Appmode. While in Appmode, click the `Edit App` button to return to the editor.\n",
     "\n",
-    "- Add / update files in `<your tool name>/bin`, `<your tool name>/middleware`, `<your tool name>/src` and `<your tool name>/remotebin` directories as required for your tool.\n",
+    "- Add / update files in `<your tool name>/bin`, `<your tool name>/src` and `<your tool name>/remotebin` directories as required for your tool.\n",
     "\n",
-    "- Replace -u anaconda-X with -u anaconda-7 in the `<your tool name>/middleware/invoke` script.\n",
-    "\n",
+    "    - Replace -u anaconda-X with -u anaconda-7 in the `<your tool name>/middleware/invoke` script.\n",
+    "    \n",
     "- Test your tool's updates. \n",
     "\n",
     "- Commit the your tool's updates to your tool's repository.\n",
