Mods to improve documentation. Mods to make workflow output more consistent across the templates.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "- The Pegasus Workflow Management System (WMS) comprises software that automates and manages the execution of computational workflow jobs, including staging the jobs, distributing the work, submitting the jobs for execution, as well as handling data flow dependencies and overcoming job failures.\n",
     "\n",
-    "- This Jupyter Notebook tool provides a tutorial and template scripts for running Pegasus workflows on Ghub.\n",
+    "- This Jupyter Notebook tool provides an introductory  tutorial and template scripts for running Pegasus WMS workflows on Ghub.\n",
     "\n",
     "- This tool is modeled after the Pegasus Tutorial tool by d k.\n"
    ]
@@ -49,7 +49,9 @@
     "\n",
     "- These workflow jobs are executed on the University at Buffalo (UB)'s Center For Computational Research (CCR)'s generally accessible high performance compute cluster, UB-HPC, using Pegasus and submit!\n",
     "\n",
-    "- To start, enter a string of lunch items in the `Lunch Items` text box, and, press the `Launch Workflow` button. After you press the `Launch Workflow` button, the string of lunch items is saved to the file `f.a`. The first workflow job reads the `f.a` file and writes the received lunch items to the file `f.b`. The second workflow job reads the `f.b` file and writes a thank you greeting to file `f.c`. When the workflow jobs complete, the thank you greeting is displayed in the `View Workflow Results` section. See the `Give It a Try` section for more information.\n"
+    "- To start, enter a string of lunch items in the `Lunch Items` text box and click the `Launch Workflow` button. After you click the `Launch Workflow` button, the string of lunch items is saved to the file `f.a`. Pegasus transfers the `f.a` file, and, the workflow jobs for the selected template, from Ghub to UB-HPC. On UB-HPC, the first workflow job reads the `f.a` file and writes the received lunch items to the file `f.b`. When the first workflow job completes, the second workflow job reads the `f.b` file and writes a thank you greeting to the file `f.c`. When the second workflow job completes, Pegasus transfers the `f.c` file from UB-HPC to Ghub and the thank you greeting, contained in the `f.c` file, is displayed in the `View Workflow Results` section. See the `Give It a Try` and `View the Selected Template's Scripts and Source Code` sections for more information.\n",
+    "\n",
+    "- See the [CCR_Ghub_Demo](https://github.com/GhubGateway/CCR_Ghub_Demo) GitHub repository for a demonstation and templates for executing Pegasus WMS workflow jobs in parallel on UB-HPC.\n"
    ]
   },
   {
@@ -233,9 +235,9 @@
     "    \n",
     "3. [**Learn about software that powers this tool**](#learnaboutsoftware)<br />\n",
     "\n",
-    "4. [**Create your Pegasus workflow tool**](#createyourworkflowtool)<br />\n",
+    "4. [**Create your Pegasus WMS workflow tool**](#createyourworkflowtool)<br />\n",
     "\n",
-    "Please [Schedule a Meeting](https://theghub.org/bookmeeting) if you need help with creating your Pegasus workflow tool on Ghub."
+    "Please [Schedule a Meeting](https://theghub.org/bookmeeting) if you need help with creating your Pegasus WMS workflow tool on Ghub."
    ]
   },
   {
@@ -491,7 +493,7 @@
     "\n",
     "- You will only need to click the `Build Workflow Executables` button when binary executables are required for new or updated sources files.\n",
     "\n",
-    "- The `Build Executables` button is disabled when this notebook is launched from the Ghub desktop. Otherwise, the `Build Executables` button is enabled when the CPP, Fortran or MATLAB template is selected.  See the `Build Scripts` section for more information.\n",
+    "- The `Build Workflow Executables` button is disabled when this notebook is launched from the Ghub desktop. Otherwise, the `Build Workflow Executables` button is enabled when the CPP, Fortran or MATLAB template is selected.  See the `Build Scripts` section for more information.\n",
     "\n",
     "- You will receive an email when the workflow completes.\n",
     "\n",
@@ -699,11 +701,12 @@
     "\n",
     "                        with workflow_results:\n",
     "\n",
-    "                            ##print(\"%s: \\n\\n\" %workflow_results_filepath)\n",
+    "                            print('\\n')\n",
     "                            f = open(workflow_results_filepath,'r')\n",
     "                            for line in f:\n",
     "                                print(line.rstrip())\n",
     "                            f.close()\n",
+    "                            print('\\n')\n",
     "\n",
     "                    else:\n",
     "\n",
@@ -1111,7 +1114,7 @@
     "- The Replica Catalalog defines the locations of the input files required by the workflow jobs.\n",
     "\n",
     "When the `Launch Workflow` button is clicked, the launch_wrapper Python script's LaunchWrapper class is instantiated to plan and start a Pegasus workflow. \n",
-    "The LaunchWrapper class's run_workflow function is called to execute Pegasus API functions to configure the required catalogs and job definitions and create an abstract YAML file. To enable portability of the workflow, the YAML file does not contain data and software locations, these are looked up when Pegasus plans the workflow. On Ghub, the submit command line tool is used to let Pegasus know when the YAML file is ready to be processed and for Pegasus to plan and start the workflow. Pegasus processes the YAML file, resolving locations of cluster end points, workflow jobs, and input data, and, compiles a DAG file. DAGMan as directed by the DAG file, orders the workflow jobs according to their dependencies and submits jobs ready for execution to HTCondor. HTCondor in turn submits the jobs to the UB-HPC cluster. On the UB-HPC cluster, SLURM provides the framework for queuing the workflow jobs, allocating compute nodes, and starting the execution of jobs. When SLURM jobs finish execution, the final status and output data for the finished jobs are returned.    \n"
+    "The LaunchWrapper class's run_workflow function is called to execute Pegasus API functions to configure the required catalogs and job definitions and create an abstract YAML file. To enable portability of the workflow, the YAML file does not contain data and software locations, these are looked up when Pegasus plans the workflow. On Ghub, the submit command line tool is used to let Pegasus know when the YAML file is ready to be processed and for Pegasus to plan and start the workflow. Pegasus processes the YAML file, resolving locations of cluster end points, workflow jobs, and input data, and, compiles a DAG file. DAGMan as directed by the DAG file, orders the workflow jobs according to their dependencies and submits jobs ready for execution to HTCondor. HTCondor in turn submits the jobs to the UB-HPC cluster. On the UB-HPC cluster, Slurm provides the framework for queuing the workflow jobs, allocating compute nodes, and starting the execution of jobs. When Slurm jobs finish execution, the final status and output data for the finished jobs are returned.    \n"
    ]
   },
   {
@@ -1182,7 +1185,9 @@
     " \n",
     "When the `Build Workflow Executables` button is clicked, the build_wrapper Python script's BuildWrapper class is instantiated to plan and start a Pegasus workflow to build the required binary executables. Processing is similar to the LaunchWrapper class's processing, see the `Launch Scripts and Source Code` section for more information.\n",
     "\n",
-    "CPP and Fortran binary executables are built on CCR using the gcc compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n"
+    "CPP and Fortran binary executables are built on CCR using the gcc compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n",
+    "\n",
+    "As noted in the `Build the Workflow Executables` section, the `Build Workflow Executables` button is disabled when this notebook is launched from the Ghub desktop. Functionality is retained as a guideline. See the `Create Your Pegasus WMS Workflow Tool` section for more information."
    ]
   },
   {
@@ -1374,7 +1379,7 @@
    "metadata": {},
    "source": [
     "<a name=\"createyourworkflowtool\"></a>\n",
-    "## Create Your Pegasus Workflow Tool [&#8607;](#userguide)\n",
+    "## Create Your Pegasus WMS Workflow Tool [&#8607;](#userguide)\n",
     "\n",
     "<a name=\"gettemplatefiles\"></a>\n",
     "### Get the Template Files [&#8607;](#userguide)\n",
@@ -1384,8 +1389,6 @@
     "- This tool's GitHub repository is located at [Ghub_Pegasus_WMS_Tutorial_and_Templates](https://github.com/GhubGateway/Ghub_Pegasus_WMS_Tutorial_and_Templates) and can be cloned with `git clone https://github.com/GhubGateway/Ghub_Pegasus_WMS_Tutorial_and_Templates`.\n",
     "\n",
     "- Specific template files provided by this tool can also be downloaded using the `Download` buttons provided by this tool. See the `View the Selected Template's Scripts and Source Code` section for more information.\n",
-    "\n",
-    "- See the [CCR_Ghub_Demo](https://github.com/GhubGateway/CCR_Ghub_Demo) GitHub repository for a demonstation and templates for executing Pegasus WMS jobs in parallel on UC-HPC.\n",
     "\n",
     "<a name=\"createyourtool\"></a>\n",
     "### Create Your Tool On Ghub [&#8607;](#userguide)\n",
@@ -1407,7 +1410,7 @@
     "\n",
     "- Launch the Jupyter Notebooks (202210) tool from the Ghub Dashboard's My Tools component and open `<your tool name>.ipynb`. Update `<your tool name>.ipynb` as required for your tool. Save your notebook updates and click the `Appmode` button to see how your notebook will display in Appmode. While in Appmode, click the `Edit App` button to return to the editor.\n",
     "\n",
-    "- Add / update files in `<your tool name>/bin`, `<your tool name>/src` and `<your tool name>/remotebin` directories as required for your tool.\n",
+    "- Using the template files as a guideline, update add / update files in `<your tool name>/bin`, `<your tool name>/src` and `<your tool name>/remotebin` directories as required for your tool.\n",
     "\n",
     "    - Replace -u anaconda-X with -u anaconda-7 in the `<your tool name>/middleware/invoke` script.\n",
     "    \n",
@@ -1415,7 +1418,9 @@
     "\n",
     "- Commit the your tool's updates to your tool's repository.\n",
     "\n",
-    "- Go to your tool's status page and let the Ghub Administrators know that you have commited updates for your tool that are ready to be installed.\n"
+    "- Go to your tool's status page and let the Ghub Administrators know that you have commited updates for your tool that are ready to be installed.\n",
+    "\n",
+    "\n"
    ]
   },
   {
